[project]
name = "odoo-addons-oca-sale-workflow"
version = "17.0.20240415.3"
dependencies = [
    "odoo-addon-product_form_sale_link>=17.0dev,<17.1dev",
    "odoo-addon-sale_cancel_reason>=17.0dev,<17.1dev",
    "odoo-addon-sale_commercial_partner>=17.0dev,<17.1dev",
    "odoo-addon-sale_delivery_state>=17.0dev,<17.1dev",
    "odoo-addon-sale_fixed_discount>=17.0dev,<17.1dev",
    "odoo-addon-sale_force_invoiced>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_archive>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_line_menu>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_type>=17.0dev,<17.1dev",
    "odoo-addon-sale_procurement_group_by_line>=17.0dev,<17.1dev",
    "odoo-addon-sale_product_set>=17.0dev,<17.1dev",
    "odoo-addon-sale_shipping_info_helper>=17.0dev,<17.1dev",
    "odoo-addon-sale_start_end_dates>=17.0dev,<17.1dev",
    "odoo-addon-sale_stock_picking_blocking>=17.0dev,<17.1dev",
    "odoo-addon-sale_tier_validation>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
