[project]
name = "odoo-addons-oca-sale-workflow"
version = "17.0.20240917.0"
dependencies = [
    "odoo-addon-partner_sale_pivot>=17.0dev,<17.1dev",
    "odoo-addon-product_form_sale_link>=17.0dev,<17.1dev",
    "odoo-addon-product_supplierinfo_for_customer_sale>=17.0dev,<17.1dev",
    "odoo-addon-sale_advance_payment>=17.0dev,<17.1dev",
    "odoo-addon-sale_automatic_workflow>=17.0dev,<17.1dev",
    "odoo-addon-sale_automatic_workflow_stock>=17.0dev,<17.1dev",
    "odoo-addon-sale_blanket_order>=17.0dev,<17.1dev",
    "odoo-addon-sale_cancel_reason>=17.0dev,<17.1dev",
    "odoo-addon-sale_commercial_partner>=17.0dev,<17.1dev",
    "odoo-addon-sale_delivery_state>=17.0dev,<17.1dev",
    "odoo-addon-sale_discount_display_amount>=17.0dev,<17.1dev",
    "odoo-addon-sale_exception>=17.0dev,<17.1dev",
    "odoo-addon-sale_fixed_discount>=17.0dev,<17.1dev",
    "odoo-addon-sale_force_invoiced>=17.0dev,<17.1dev",
    "odoo-addon-sale_force_whole_invoiceability>=17.0dev,<17.1dev",
    "odoo-addon-sale_invoice_policy>=17.0dev,<17.1dev",
    "odoo-addon-sale_manual_delivery>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_archive>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_carrier_auto_assign>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_general_discount>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_invoicing_finished_task>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_line_date>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_line_menu>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_line_sequence>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_line_tag>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_lot_selection>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_price_recalculation>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_priority>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_product_recommendation>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_qty_change_no_recompute>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_revision>=17.0dev,<17.1dev",
    "odoo-addon-sale_order_type>=17.0dev,<17.1dev",
    "odoo-addon-sale_partner_incoterm>=17.0dev,<17.1dev",
    "odoo-addon-sale_procurement_group_by_line>=17.0dev,<17.1dev",
    "odoo-addon-sale_product_multi_add>=17.0dev,<17.1dev",
    "odoo-addon-sale_product_set>=17.0dev,<17.1dev",
    "odoo-addon-sale_quotation_number>=17.0dev,<17.1dev",
    "odoo-addon-sale_shipping_info_helper>=17.0dev,<17.1dev",
    "odoo-addon-sale_sourced_by_line>=17.0dev,<17.1dev",
    "odoo-addon-sale_start_end_dates>=17.0dev,<17.1dev",
    "odoo-addon-sale_stock_cancel_restriction>=17.0dev,<17.1dev",
    "odoo-addon-sale_stock_picking_blocking>=17.0dev,<17.1dev",
    "odoo-addon-sale_stock_picking_note>=17.0dev,<17.1dev",
    "odoo-addon-sale_tier_validation>=17.0dev,<17.1dev",
    "odoo-addon-sale_validity_auto_cancel>=17.0dev,<17.1dev",
    "odoo-addon-sales_team_security>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
